--- a/Components/Pages/Login.razor
+++ b/Components/Pages/Login.razor
@@ -5,124 +5,10 @@
 @inject NavigationManager navigationManager
 @inject AuthenticationStateService authStateService
 
-<style>
-    .container {
-        width: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
+<head>
+    <link href="css/login.css" rel="stylesheet" />
+</head>
 
-    /* The form styling */
-    .form-wrapper {
-        width: 400px; /* Adjust width as per your preference */
-        padding: 20px;
-        border: 1px solid #0F4B62;
-        border-radius: 8px;
-        background-color: #F4FCFF;
-    }
-
-    /* Title and heading styling */
-    h3 {
-        text-align: center;
-        margin-bottom: 20px;
-    }
-
-    /* Form group styling */
-    .form-group {
-        display: flex;
-        margin-bottom: 15px;
-    }
-
-        .form-group label {
-            font-weight: bold;
-            margin-bottom: 5px;
-            width: 80px;
-        }
-
-        .form-group input,
-        .form-group select,
-        .form-group textarea {
-            width: 80%;
-            padding: 10px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            margin-bottom: 10px;
-            font-size: 16px;
-        }
-
-        .form-group textarea {
-            height: 105px;
-        }
-
-            .form-group input[type="text"]:focus,
-            .form-group input[type="number"]:focus,
-            .form-group input[type="date"]:focus,
-            .form-group select:focus,
-            .form-group textarea:focus {
-                outline: none;
-                border-color: #0F4B62;
-            }
-
-    /* Error and success messages */
-    .error-message,
-    .success-message {
-        margin-top: 10px;
-        padding: 10px;
-        border-radius: 3px;
-        font-size: 14px;
-    }
-
-    .error-message {
-        background-color: #ffcccc;
-        border: 1px solid #f44336;
-        color: #f44336;
-    }
-
-    .success-message {
-        background-color: #ccffcc;
-        border: 1px solid #4CAF50;
-        color: #4CAF50;
-    }
-
-    /* Button styling */
-    .form-wrapper button {
-        background-color: #30718A;
-        color: white;
-        margin-block-start: 0;
-        padding: 10px 20px;
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
-        width: 25%;
-        font-size: 16px;
-        align-self: flex-end;
-    }
-
-        .form-wrapper button:hover {
-            background-color: #255C71;
-        }
-
-    .signup-link {
-        text-align: center;
-        margin-top: 10px;
-    }
-
-    .signup-link a {
-        color: #30718A;
-        text-decoration: none;
-    }
-
-    .signup-link a:hover {
-        text-decoration: underline;
-    }
-
-    .error-message {
-        color: red;
-        text-align: center;
-        margin-top: 10px;
-    }
-</style>
 <h3 class="title">Expense Tracker App</h3>
 <div class="container">
 <div class="form-wrapper">
@@ -164,7 +50,7 @@
                 // Set the authenticated user in state management
                 authStateService.SetAuthenticatedUser(user);
 
-                // Redirect to the dashboard or transactions page
+                // Redirect to the dashboard page on login.
                 navigationManager.NavigateTo("/dashboard");
             }
             else
